# UnforgivingDevicesNative

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  LICENSE  PCH.h  README.md  plugin.cpp  vcpkg-configuration.json  vcpkg.json
SKSE/plugins/: OrgasmSystem.ini  UDNative.ini
include/: UD_ActorSlotManager.h  UD_Animation.h  UD_Config.h  UD_ControlManager.h  UD_DDAPI.h  UD_Diagnosis.h  UD_FastTravelManager.h  UD_GameEvents.h  UD_H.h  UD_Input.h  UD_Inventory.h  UD_Keywords.h  UD_Lib.h  UD_Lockpick.h  UD_Macros.h  UD_Materials.h  UD_MessageBox.h  UD_MinigameEffect.h  UD_ModEvents.h  UD_Modifiers.h  UD_ModuleManager.h  UD_PapyrusDelegate.h  UD_PlayerStatus.h  UD_RegisterPapyrus.h  UD_SLPP.h  UD_Serialization.h  UD_Skill.h  UD_Spinlock.h  UD_UI.h  UD_Updater.h  UD_Utility.h
include/OrgasmSystem/: OrgasmConfig.h  OrgasmData.h  OrgasmEvents.h  OrgasmManager.h
src/: UD_ActorSlotManager.cpp  UD_Animation.cpp  UD_Config.cpp  UD_ControlManager.cpp  UD_Diagnosis.cpp  UD_FastTravelManager.cpp  UD_GameEvents.cpp  UD_Input.cpp  UD_Inventory.cpp  UD_Keywords.cpp  UD_Lib.cpp  UD_Lockpick.cpp  UD_Materials.cpp  UD_Messagebox.cpp  UD_MinigameEffect.cpp  UD_ModEvents.cpp  UD_Modifiers.cpp  UD_ModuleManager.cpp  UD_PapyrusDelegate.cpp  UD_PlayerStatus.cpp  UD_RegisterPapyrus.cpp  UD_SLPP.cpp  UD_Serialization.cpp  UD_Skill.cpp  UD_UI.cpp  UD_Updater.cpp  UD_Utility.cpp
src/OrgasmSystem/: OrgasmConfig.cpp  OrgasmData.cpp  OrgasmEvents.cpp  OrgasmManager.cpp
